# pinocchio-ceres

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  ceres-hello-world.cpp  inverse-geometry.cpp  jacques-a-dit.cpp
include/pinocchio/ceres/: augmented-lagrangian-problem.hpp  constraint-types.hpp  eigen.hpp  linear-least-square.hpp  local-parameterization.hpp  proximal-configuration-cost.hpp  proximal-cost.hpp  quadratic-program.hpp  shift-residual.hpp
include/pinocchio/ceres/utils/: crs-matrix.hpp
src/: CMakeLists.txt  augmented-lagrangian-problem.cpp
src/utils/: crs-matrix.cpp
tests/: CMakeLists.txt  local-parameterization.cpp  proximal-cost.cpp  quadratic-program.cpp  shift-residual.cpp
tests/utils/: CMakeLists.txt  crs-matrix.cpp
